--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
 </style>
 </head>
     <body>
-        <h1>👋 Hi, I’m @JieChen2000, Welcome to my site!</h1>
-            
-        <ul> Some tools I wrote
-            <li><a href="https://jiechen2000.github.io/usatt_rating_calc/" target="_blank" rel="noopener noreferrer">usatt_rating_calc</a></li>
+        <h2>👋 Hi, I’m Jay Chen, Welcome to my site!</h2>
+        My Ph.D is in particle physics experiment. Now I am a data scientist working at Shell.    
+        <ul> Here are some simple tools I wrote
+            <li>
+                <a href="https://jiechen2000.github.io/usatt_rating_calc/" target="_blank" rel="noopener noreferrer">usatt_rating_calc</a>: a javascript tool to calculate a player's rating change after a USATT certified tournament.
+            </li>
+        </ul>
+        <ul> Other links
+            <li>
+                <a href="https://scholar.google.com/citations?user=u5o1YBIAAAAJ" target="_blank" rel="noopener noreferrer"> Google Scholar </a> 
+            </li>
+            <li>
+                <a href="https://inspirehep.net/authors/1013878" target="_blank" rel="noopener noreferrer"> Inspire HEP</a> 
+            </li>
+
         </ul>
         
+
 </html>
