--- a/index.html
+++ b/index.html
@@ -10,12 +10,39 @@
 </head>
     <body>
         <h2>👋 Hi, I’m Jay Chen, Welcome to my site!</h2>
-        My Ph.D is in particle physics experiment. Now I am a data scientist working at Shell.    
-        <ul> Here are some simple tools I wrote
+        My Ph.D is in experimental particle physics. I was part of the effort in <a href="https://www.sciencedirect.com/science/article/pii/S0370269312008581?via%3Dihub" target="_blank" rel="noopener noreferrer">Higgs discovery</a>, the <a href="https://www.science.org/toc/science/338/6114" target="_blank" rel="noopener noreferrer">"Breakthrough of the year"</a> in 2012 by <em>science</em>. 
+        Now I am a data scientist working at Shell.    
+        <ul> Here are some of my recent work available publicly
+            <li>
+                <a href="https://library.seg.org/doi/abs/10.1190/segam2021-3587358.1" target="_blank" rel="noopener noreferrer">Deep Seismic2Well Tie</a>: A physics-guided CNN approach to a classic geophysical workflow
+            </li>
+            <li>
+                <a href="https://onepetro.org/SPEATCE/proceedings-abstract/20ATCE/4-20ATCE/D041S046R007/449896" target="_blank" rel="noopener noreferrer">ML Gravity</a>: Machine Learning Method to Determine Salt Structures from Gravity Data
+            </li>
+            <li>
+                <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=u5o1YBIAAAAJ&sortby=pubdate&citation_for_view=u5o1YBIAAAAJ:ye4kPcJQO24C" target="_blank" rel="noopener noreferrer">Shallow Hazards Risk Quantification</a>: Quantifying the Risk of Shallow Hazards Using a Principled Statistical Workflow
+            </li>
+            <li>
+                <a href="https://dl.acm.org/doi/abs/10.1145/3325917.3325926" target="_blank" rel="noopener noreferrer">Salt DNN</a>: Automatic Seismic Salt Interpretation with Deep Convolutional Neural Networks
+            </li>
+            <li>
+                <a href="https://arxiv.org/abs/1808.09856" target="_blank" rel="noopener noreferrer">ML Rock Facies</a>: Application of Machine Learning in Rock Facies Classification with Physics-Motivated Feature Augmentation
+
+            </li>
+        </ul>
+        <ul> Here are some hobby projects I did. 
             <li>
                 <a href="https://jiechen2000.github.io/usatt_rating_calc/" target="_blank" rel="noopener noreferrer">usatt_rating_calc</a>: a javascript tool to calculate a player's rating change after a USATT certified tournament.
             </li>
-        </ul>
+            <li>
+                <a href="https://github.com/JieChen2000/dqn-navigation" target="_blank" rel="noopener noreferrer">DQN Navigation</a>: a RL agent to navigate (and collect bananas!) in a large, square world.
+            </li>
+            <li>
+                <a href="https://github.com/JieChen2000/rl-continous-control" target="_blank" rel="noopener noreferrer">Continuous Control RL</a>: Continuous Control RL example with multiple agents.
+            </li>            
+
+            
+        </ul>        
         <ul> Other links
             <li>
                 <a href="https://scholar.google.com/citations?user=u5o1YBIAAAAJ" target="_blank" rel="noopener noreferrer"> Google Scholar </a> 
@@ -23,7 +50,9 @@
             <li>
                 <a href="https://inspirehep.net/authors/1013878" target="_blank" rel="noopener noreferrer"> Inspire HEP</a> 
             </li>
-
+            <li>
+                <a href="https://publons.com/researcher/2764459/jie-chen/" target="_blank" rel="noopener noreferrer"> Researcher ID</a> 
+            </li>            
         </ul>
         
 
